2010-09-04 rafl 0.24 301 tests
  * Apply changes from blead perl
    Mostly POD fixes and minor test tweaks.

2008-04-05 Tels 0.23 301 tests
  * require Math::BigInt v1.88
  * require Math::BigRat v0.21
  * update bundles Module::Install
  * require Perl 5.006 (vs. 5.006002), should work with that

2007-06-30 Tels 0.22 301 tests
  * make the pragmas lexical, so that "no bigint;" etc. works
  * make "use bigint; use bignum;" not warn about redefining "inf" and "NaN"
    This also means a "use bigint;" will not override any already existing
    "inf" or "NaN" routine
  * require Math::BigInt v1.87
  * fix #27059: t/option_l.t fails
  * on Perl 5.9.4 or later: "overload" hex() and oct() with lexical routines
    that also handle arbitrary big integers
  * for all Perls: make "use bigint qw/hex oct/" export global hex() and oct()
    routines that work with big integers
  * make bignum.pm and bigrat.pm re-use code from bigint.pm
  * add exportable bpi() and bexp() methods
  * add exportable PI and e constants

2007-04-17 Tels 0.21 205 tests
  * require Math::BigInt v1.83
  * require Math::BigRat v0.19
  * add support for "try" and "only"
  * fix licence field back to "perl"

2007-04-09 Tels 0.20 198 tests
  * require Math::BigInt v1.82
  * require Math::BigRat v0.18
  * add a test for bug #18025:
    "bignum/bigrat can lead to a number that is both 1 and 0"
  * POD test needs Test::Pod::Coverage 1.08 to work

2007-02-03 Tels 0.19 194 tests
  * require Math::BigInt v1.79
  * require Perl v5.6.2
  * add Build.PL
  * use Module::Install
  * remove PREREQ_FATAL since the toolchain is broken
  * apply spelling fixes to POD

2007-01-27 Tels 0.18 194 tests
  * require Math::BigInt 1.78
  * add support for octal constants
  * use PREREQ_FATAL
  * add POD tests

Older changelog:

2002-01-29 Tels 0.01
  * first version
2002-01-29 Tels 0.02
  * AUTOLOAD, cleaned up a bit
2002-02-10 Tels 0.03
  * renamed to bignum
  * added dependency and loading of Math::BigRat