@@ -25,4 +25,4 @@ requires:
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.24
+version: 0.25
