@@ -3,16 +3,8 @@
 ###############################################################################
 # test for e() and PI() exports
 
-use Test::More;
 use strict;
-
-BEGIN
-  {
-  $| = 1;
-  chdir 't' if -d 't';
-  unshift @INC, '../lib';
-  plan tests => 4;
-  }
+use Test::More tests => 4;
 
 use bignum qw/e PI bexp bpi/;
 
