@@ -3,16 +3,8 @@
 ###############################################################################
 # test for bug #18025: bignum/bigrat can lead to a number that is both 1 and 0
 
-use Test::More;
 use strict;
-
-BEGIN
-  {
-  $| = 1;
-  chdir 't' if -d 't';
-  unshift @INC, '../lib';
-  plan tests => 4;
-  }
+use Test::More tests => 4;
 
 use bignum;
 
