@@ -2,21 +2,10 @@
 
 ###############################################################################
 
-use Test;
 use strict;
-
-BEGIN
-  {
-  $| = 1;
-  chdir 't' if -d 't';
-  unshift @INC, '../lib';
-  unshift @INC, '../lib/bignum/t' if $ENV{PERL_CORE};
-  plan tests => 26;
-  }
+use Test::More tests => 26;
 
 use bigint;
 
-my ($x);
-
-require "infnan.inc";
+require "t/infnan.inc";
 
