@@ -1,15 +1,7 @@
 #!/usr/bin/perl -w
 
-use Test::More;
 use strict;
-
-BEGIN
-  {
-  $| = 1;
-  chdir 't' if -d 't';
-  unshift @INC, '../lib';
-  plan tests => 4;
-  }
+use Test::More tests => 4;
 
 my @C = qw/Math::BigInt Math::BigFloat/;
 
