@@ -3,16 +3,8 @@
 ###############################################################################
 # Test "no bigrat;" and overloading of hex()/oct() for newer Perls
 
-use Test::More;
 use strict;
-
-BEGIN
-  {
-  $| = 1;
-  chdir 't' if -d 't';
-  unshift @INC, '../lib';
-  plan tests => 10;
-  }
+use Test::More tests => 10;
 
 # no :hex and :oct means these do not get overloaded for older Perls:
 use bigrat;
