@@ -1,3 +1,7 @@
+2010-09-15 rafl 0.24 302 tests
+  * Synchronise with blead perl
+    Only changes in the tests.
+
 2010-09-04 rafl 0.24 301 tests
   * Apply changes from blead perl
     Mostly POD fixes and minor test tweaks.
